<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hack the Hood</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_business_form">Apply for a Free Website</string>
    <string name="tvBusinessLabel">Business Information</string>
    <string name="tvAssetCollection">Add your Business Assets</string>
    <string name="tvContactLabel">Contact Information</string>
    <string name="tvBusinessPresence">Select current online presence: </string>
    <string name="tvApplyLabel">Apply for a New Website</string>
    <string name="etBusinessName">Business Name</string>
    <string name="tv_imagetype_label">Image Type</string>
    <string name="emailHint">E-mail address</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="forgottenPassword">Forgot password?</string>
    <string name="confirmEmailHint">Confirm e-mail address</string>
    <string name="signUp">Sign Up</string>
    <string name="change_user">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="onlinePresence">
        <item>Select current online presence</item>
        <item>Website</item>
        <item>Online Store</item>
        <item>Facebook Page</item>
        <item>Twitter Account</item>
        <item>Google Listing</item>
        <item>Yelp</item>
        <item>Other</item>
    </string-array>
    <string-array name="businessType">
        <item>Select</item>
        <item>Retail</item>
        <item>Salon/Beauty</item>
        <item>Restaurant</item>
        <item>Non-profit Agency</item>
        <item>Artist/Musician</item>
        <item>Personal website</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_asset_collection">Send Us Website Content</string>
    <string name="btnPage1">Page 1: Homepage Info</string>
    <string name="btnPage2">Page 2: Content Page Info</string>
    <string name="btnPage3">Page 3: Contact Page Info</string>
    <string name="btnSubmit">Submit</string>
    <string name="title_activity_webpage_collection">WebpageCollectionActivity</string>
    <string name="pitch_deck_title">HackTheHood</string>
    <string name="getting_started_btn_text">Get Started</string>
    <string name="business_form_btn_text">Business Form</string>
    <string name="website_template_title_default_text">Website Template Title</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="title_activity_confirmation">Confirmation Activity</string>
    <string name="tv_conf_complete">Thanks for your interest!</string>
    <string name="tv_conf_status">We will let you know once your application has been approved!</string>
    <string name="tv_status_default">""</string>
    <string name="btn_to_assets">Start Entering Website Information</string>
    <string name="btn_share_confirmation">Share</string>
    <string name="tvAssetSpinnerTitle">Select your business type</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="contact_section_title">Contact</string>
    <string name="business_section_title">Business</string>
    <string name="business_name_hint_text">Business Name</string>
    <string name="street_address_hint_text">Street Address</string>
    <string name="city_hint_text">City</string>
    <string name="postal_code_hint_text">Postal Code</string>
    <string name="business_phone_hint_text">Business Phone</string>
    <string name="contact_name_hint_text">Name</string>
    <string name="contact_phone_hint_text">Phone</string>
    <string name="submit_button_hint_text">Submit</string>
    <string name="contact_email_hint_text">Email Address</string>
    <string name="pitch_deck_default_title">Youth learning tech by helping small businesses</string>
    <string name="drawer_list_item_text">My Application</string>
    <string name="default_email">ravirani@gmail.com</string>
    <string name="logout_image_description">Log out</string>
    <string name="website_template_slide_tagline">See sample sites our students have built</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_business_online_slide_tagline">Support local youth development</string>
    <string name="get_business_online_title_text">Get your business online for free in 3 steps:</string>
    <string name="application_step1_text">1. Apply for a website</string>
    <string name="application_step2_text">2. Send us content for your website</string>
    <string name="application_step3_text">3. Youth Consultant build your website</string>
    <string name="facebook_link_textfield_hint">Link to Facebook</string>
    <string name="yelp_link_textfield_hint">Link to Yelp</string>
    <string name="twitter_link_textfield_hint">Twitter Username</string>
    <string name="instagram_link_textfield_hint">Link to Instagram</string>
    <string name="social_media_section_title">Social Media Links for your business:</string>
    <string name="graphics_section_title">Graphics:</string>
    <string name="add_logo_section_title">Add Logo</string>
    <string name="add_header_image_section_title">Add Header</string>
    <string name="add_website_content_section_title">Add Website Content:</string>
    <string name="type_of_business_section_title">Type of Business:</string>
    <string name="rec_label">Record</string>
    <string name="stop_label">Stop</string>
    <string name="default_rec_string">Recording...</string>
    <string name="play_button">Play</string>
    <string name="maps_slide_tag_line">Nearby Businesses</string>
    <string name="maps_slide_title">See nearby businesses that have participated in this program</string>
    <string name="video_slide_tag_line">Our mission</string>
    <string name="add_site_content_text">Add Site Content</string>
    <string name="assets_section_title">Assets</string>
    <string name="image_header_title1">Image1</string>
    <string name="image_header_title2">Image2</string>
    <string name="image_header_title3">Image3</string>
    <string name="designer_notes_section_title">Notes for the Designer:</string>
    <string name="generic_text_hint">Enter text here</string>
    <string name="webpage_desc_section_title">Webpage Description:</string>
    <string name="see_website_button_text">See your final website</string>
    <string name="title_activity_final_website_viewer">FinalWebsiteViewerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="fill_info_menu_item">Fill Info</string>
    <string name="clear_info_button">Clear Info</string>

</resources>