<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/default_rec_string" />

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvNotify"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_label" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_label" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button" />

    </LinearLayout>

</RelativeLayout>

