<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.hackthehood.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#40000000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:layout_alignParentTop="true"
            android:hint="@string/emailHint"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etEmail"
            android:hint="@string/passwordHint"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#ff33b5e5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgottenPassword"
            android:id="@+id/etForgot"
            android:linksClickable="true"
            android:gravity="center"
            android:layout_below="@+id/btnLogin"
            android:textColor="#ff33b5e5"
            />

    </RelativeLayout>

</FrameLayout>
