<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.hackthehood.fragments.SignupFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"
            android:hint="@string/emailHint"
            android:fontFamily="sans-serif-light"
            android:inputType="textEmailAddress"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmailConfirmation"
            android:layout_below="@+id/etEmail"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColorHighlight="@android:color/holo_blue_dark"
            android:hint="@string/confirmEmailHint"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/etEmailConfirmation"
            android:hint="@string/passwordHint"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:id="@+id/btnSignUp"
            style="@style/CTAButton"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/etPassword" />

    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoading"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
