<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.hackthehood.fragments.ConfirmationFragment">

    <ImageView
        android:id="@+id/ivStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_success"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_below="@id/ivStatus"
        android:text="@string/tv_conf_complete" />

    <TextView
        android:id="@+id/tvSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMainText"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_conf_status" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_share_confirmation"
        style="@style/SecondaryButton"
        android:visibility="visible"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/tvSubText" />

    <Button
        android:id="@+id/btnToAssets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_to_assets"
        style="@style/CTAButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tvSubText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnToFinalWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_website_button_text"
        style="@style/CTAButton"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/btnShare"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

</RelativeLayout>
</ScrollView>