<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.hackthehood.fragments.ImageSlideFragment">

    <TextView
        android:id="@+id/tvTagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_business_online_slide_tagline"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTagLine"
        android:scaleType="center"
        android:src="@drawable/hth_blurred"
        android:id="@+id/ivBackgroundImage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/ivBackgroundImage"
        android:background="#66000000"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/tvTagLine"
        android:lineSpacingExtra="2dp"
        android:textColor="@android:color/white"
        android:id="@+id/tvTitle"
        android:fontFamily="san-serif-light"
        android:text="@string/get_business_online_title_text" />

    <TextView
        android:layout_below="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/white"
        android:id="@+id/tvStep1"
        android:text="@string/application_step1_text"
        android:fontFamily="san-serif-light"
        android:lineSpacingExtra="2dp" />

    <TextView
        android:layout_below="@+id/tvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/white"
        android:id="@+id/tvStep2"
        android:text="@string/application_step2_text"
        android:fontFamily="san-serif-light"
        android:lineSpacingExtra="2dp" />

    <TextView
        android:layout_below="@+id/tvStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@android:color/white"
        android:id="@+id/tvStep3"
        android:text="@string/application_step3_text"
        android:fontFamily="san-serif-light"
        android:lineSpacingExtra="2dp" />



</RelativeLayout>