<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svAssetForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context="com.codepath.hackthehood.fragments.forms.WebsitePageFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/webpage_desc_section_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/llEntry1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <EditText
                    android:id="@+id/etPageText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="top|left"
                    android:hint="@string/generic_text_hint"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    tools:ignore="RtlHardcoded">

                    <requestFocus/>
                </EditText>

                <ImageView
                    android:id="@+id/ivMic1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_mic"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:text="@string/assets_section_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/llImgUpload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="@string/image_header_title"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#444"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imgFile1"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_image"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="@string/image_header_title"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#444"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imgFile2"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_image"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="@string/image_header_title"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#444"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imgFile3"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_image"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:text="@string/designer_notes_section_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llEntry2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <EditText
                    android:id="@+id/etDesignerNotes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="top|left"
                    android:hint="@string/generic_text_hint"
                    android:inputType="textMultiLine"
                    android:lines="3"/>

                <ImageView
                    android:id="@+id/ivMic2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_mic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClearInfo"
                    style="@style/SecondaryButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/clear_info_button"/>

                <Button
                    android:id="@+id/btnFillInfo"
                    style="@style/SecondaryButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/fill_info_menu_item"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddSite"
        style="@style/CTAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/add_site_content_text"/>

</RelativeLayout>